04-aws-eks-fargate/2-fargate-mixed/ums-app/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: mysql.cgocd0aui2ue.us-west-2.rds.amazonaws.com
